hphp/hack/test/typecheck/new_inference/idx_test.php.like_types.exp
File "idx_test.php", line 9, characters 23-24:
Invalid argument (Typing[4110])
File "idx.hhi", line 31, characters 30-31:
Some type constraint(s) are violated here
File "idx.hhi", line 31, characters 30-31:
Tv is a constrained type parameter
File "idx_test.php", line 4, characters 31-33:
Expected int
File "idx.hhi", line 31, characters 30-31:
But got dynamic
